output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1075.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1075.py", line 122
    /* else: */ durations[7])))))))
    ^
SyntaxError: invalid syntax
